fixed text alignment

--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -59,9 +59,12 @@ html, body, div[ng-app], div[ng-view] {
 }
 
 .tile {
+	/* FIXME: added border for testing things */
 	position: absolute;
 	width: @tileSize;
 	height: @tileSize;
 	font-family: sans-serif;
 	font-size: @tileSize;
+	line-height: @tileSize;
+	text-align: center;
 }
